Fix jump at start of drag

--- a/carousels/css/style.css
+++ b/carousels/css/style.css
@@ -25,7 +25,7 @@ nav {
   margin: 10px 10px 10px 10px;
   float: left;
   height: 150px;
-  width: 275px;
+  width: 225px;
   padding: 10px;
   display: block;
   background: #fff; 
